# MyPythonTemplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: codeql.yml  pull-request-assignee.yml  scorecard.yml  snyk-code-scan.yml  tox.yml
docs/: README.md  SUMMARY.md
mypythontemplate/scripts/: mypythontemplate.py
tests/: test_main.py
